--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
         .light-theme {
             background-color: #f0f0f0;
             color: #121212;
+            background: linear-gradient(45deg, #f0f0f0, #e0e0e0);
         }
         .light-theme .container {
             background-color: rgba(255, 255, 255, 0.8);
