--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             max-width: 600px;
             width: 100%;
             backdrop-filter: blur(10px);
+            position: relative;
         }
         .avatar {
             width: 150px;
@@ -105,7 +106,7 @@
             }
         }
         .theme-toggle {
-            position: absolute;
+            position: fixed;
             top: 10px;
             left: 10px;
             background: none;
@@ -113,6 +114,7 @@
             color: #e0e0e0;
             font-size: 1.5rem;
             cursor: pointer;
+            z-index: 1000;
             transition: color 0.3s;
         }
         .theme-toggle:hover {
