--- a/index.html
+++ b/index.html
@@ -106,16 +106,15 @@
             }
         }
         .theme-toggle {
-            display: inline-block;
-            margin-bottom: 1rem;
+            position: absolute;
+            top: 10px;
+            left: 10px;
             background: none;
             border: none;
             color: #e0e0e0;
             font-size: 1.5rem;
             cursor: pointer;
             transition: color 0.3s, box-shadow 0.3s;
-            position: relative;
-            z-index: 1000;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
             border-radius: 50%;
             padding: 0.5rem;
