--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             min-height: 100vh;
             background: linear-gradient(45deg, #121212, #1a1a1a);
             transition: background-color 0.3s, color 0.3s;
+            position: relative;
         }
         .container {
             text-align: center;
@@ -28,7 +29,6 @@
             max-width: 600px;
             width: 100%;
             backdrop-filter: blur(10px);
-            position: relative;
         }
         .avatar {
             width: 150px;
@@ -118,6 +118,7 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
             border-radius: 50%;
             padding: 0.5rem;
+            z-index: 1000;
         }
         .theme-toggle:hover {
             color: #ffffff;
@@ -151,8 +152,8 @@
     </style>
 </head>
 <body>
+    <button class="theme-toggle" onclick="toggleTheme()"><i class="fas fa-adjust"></i></button>
     <div class="container">
-        <button class="theme-toggle" onclick="toggleTheme()"><i class="fas fa-adjust"></i></button>
         <img src="https://scontent.ftpe4-1.fna.fbcdn.net/v/t39.30808-6/440488974_2099776167044081_3794764817713871643_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=IEmn1MPs2eYQ7kNvgEhKx92&_nc_ht=scontent.ftpe4-1.fna&oh=00_AYAKQQm_zHvKbijsWj6jSCcBlduoDzYng7ddbjPcqQGnAA&oe=6686AF56" alt="尊貴" class="avatar">
         <h1>酷吧 這我個人網站</h1>
         <p>社群連結</p>
