--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             }
         }
         .theme-toggle {
-            position: absolute;
+            position: fixed;
             top: 10px;
             left: 10px;
             background: none;
