--- a/index.html
+++ b/index.html
@@ -182,11 +182,9 @@
         }
 
         const avatar = document.getElementById('avatar');
-        const avatarImages = [
-            'https://c.files.bbci.co.uk/17DE8/production/_102686779_momo.jpg',
-            'https://today-obs.line-scdn.net/0hIRp87p9oFn1NQTxseA9pKncXFRJ-LQV-KXdHfg4vSEkyd1YpeCdRSGFAT0Q0JFEjI3dQEmxFDUxoIlIvJiZR/w1200',
-            'https://cdn2.ettoday.net/images/367/367528.jpg'
-            
+        const avatarImages = ['https://cdn2.ettoday.net/images/367/367528.jpg',
+            'https://c.files.bbci.co.uk/17DE8/production/_102686779_momo.jpg'
+                      
         ];
 
         avatar.addEventListener('click', () => {
