--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 <body>
     <button class="theme-toggle" onclick="toggleTheme()"><i class="fas fa-adjust"></i></button>
     <div class="container">
-        <img src="https://scontent.ftpe4-1.fna.fbcdn.net/v/t39.30808-6/440488974_2099776167044081_3794764817713871643_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=IEmn1MPs2eYQ7kNvgEhKx92&_nc_ht=scontent.ftpe4-1.fna&oh=00_AYAKQQm_zHvKbijsWj6jSCcBlduoDzYng7ddbjPcqQGnAA&oe=6686AF56" alt="尊貴" class="avatar" id="avatar">
+        <img src="ABC07774.jpg" alt="尊貴" class="avatar" id="avatar">
         <h1>個人網站</h1>
         <p>社群連結</p>
         
